k8s-deploy-local.yaml
# Simplified KillKrill Deployment for Local K8s
---
apiVersion: v1
kind: Namespace
metadata:
  name: killkrill
---
# PostgreSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:15
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: killkrill
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
---
# Redis Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7
        args: ["--requirepass", "killkrill123"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: killkrill
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
# Log Receiver Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-receiver
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-receiver
  template:
    metadata:
      labels:
        app: log-receiver
    spec:
      containers:
      - name: log-receiver
        image: registry-dal2.penguintech.io/killkrill/log-receiver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: log-receiver
  namespace: killkrill
spec:
  type: NodePort
  selector:
    app: log-receiver
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30081
---
# Metrics Receiver Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-receiver
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-receiver
  template:
    metadata:
      labels:
        app: metrics-receiver
    spec:
      containers:
      - name: metrics-receiver
        image: registry-dal2.penguintech.io/killkrill/metrics-receiver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-receiver
  namespace: killkrill
spec:
  type: NodePort
  selector:
    app: metrics-receiver
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082
---
# Log Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-worker
  namespace: killkrill
spec:
  replicas: 2
  selector:
    matchLabels:
      app: log-worker
  template:
    metadata:
      labels:
        app: log-worker
    spec:
      containers:
      - name: log-worker
        image: registry-dal2.penguintech.io/killkrill/log-worker:latest
        imagePullPolicy: Always
---
# Metrics Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-worker
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics-worker
  template:
    metadata:
      labels:
        app: metrics-worker
    spec:
      containers:
      - name: metrics-worker
        image: registry-dal2.penguintech.io/killkrill/metrics-worker:latest
        imagePullPolicy: Always
---
# Manager Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  namespace: killkrill
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: manager
        image: registry-dal2.penguintech.io/killkrill/manager:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: manager
  namespace: killkrill
spec:
  type: NodePort
  selector:
    app: manager
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30880
